2008-07-23  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-config.c: Don't leak from calling
	tracker_path_list_filter_duplicates(). 
	
	* src/trackerd/tracker-crawler.[ch]: Don't just iterate the FIRST
	path in the list of paths and recurse paths, make sure we iterate
	2,3,4,etc. too. Also make it possible to add paths to be iterated
	as a public API.
	
	* src/trackerd/tracker-monitor.[ch]: Put the module_name parameter
	before the GFile since that's how it is done everywhere else.
	
	* src/trackerd/tracker-processor.c: Implemented the old config
	option WatchDirectoryRoots and CrawlDirectoryRoots.

2008-07-23  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-config.c:
	(config_dir_ensure_exists_and_return): Use file-utils functions
	instead of duplicating code here. Make sure we filter for
	duplicates no-watch-roots, watch-roots and crawl-roots.

2008-07-23  Carlos Garnacho  <carlos@imendio.com>

	Check that a service exists before inserting it again in the database.

	* src/tracker-indexer/tracker-indexer-db.[ch]
	(get_dirname_and_basename): New helper function.
	(tracker_db_check_service): New function, returns the ID for the
	service (if any).
	* src/tracker-indexer/tracker-indexer.c (process_file): Check that the
	service doesn't exist before trying to index it.

2008-07-23  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/applications.c:
	* src/tracker-indexer/modules/evolution.c:
	* src/tracker-indexer/modules/files.c:
	* src/tracker-indexer/tracker-indexer.c: Revert the "use TrackerField
	as metadata keys" patch, it's incomplete at the moment and adds extra
	lookup overhead. Probably a TrackerMetadata simple object to collect
	data and do some caching would be the best option.

2008-07-23  Martyn Russell  <martyn@imendio.com>

	* data/dbus/tracker-indexer.xml: 
	* src/tracker-indexer/tracker-indexer.[ch]: Changed _set_paused()
	API to have _pause(), _continue() and _pause_for_duration().
	